# physics-informed-robotic-assembly

./: LICENSE  README.md
Robotic_assembly_simulation/: FEA_plugin.py  FEA_plugin_decompose.py  FEA_single_bar_plugin.py  column_info_structure.json  column_infos.json  structure_assembly_flexible_elastic.py  structure_assembly_flexible_elastic_viz.py  structure_assembly_flexible_elastic_viz_video.py  structure_assembly_rigid_elastic.py  structure_assembly_rigid_elastic_viz.py  structure_assembly_rigid_elastic_viz_video.py  structure_assmebly_rigid_rigid.py  structure_assmebly_rigid_rigid_viz.py  structure_assmebly_rigid_rigid_viz_video.py  util.py
Robotic_assembly_simulation/experiment_data/: column_approach_grasp_path_stats.csv  column_approach_path_stats_flexible_0.5025_elastic_1.6.csv  column_approach_path_stats_flexible_0.5025_elastic_3.2.csv  column_approach_path_stats_flexible_1.05_elastic_1.6.csv  column_approach_path_stats_flexible_1.05_elastic_3.2.csv  column_approach_path_stats_flexible_2.1_elastic_1.6.csv  column_approach_path_stats_flexible_2.1_elastic_3.2.csv  column_assembly_paths.json  (+28 more)
Robotic_assembly_simulation/pybullet_tools/ikfast/ur5e_robotiq/: CMakeLists.txt  ik.py  ikfast_pybind_ur5e_robotiq.cpp  ikfast_ur5e_robotiq.cpp  setup_cmake.py  setup_origin.py
Sequence_planning/: Experimental structure - arc bridge.gh  Experimental structure - double-layer roof - disp.gh  Experimental structure - double-layer roof - stress.gh  Experimental structure - twisted column.gh  sequence_planning_enhanced_GA.py  sequence_planning_greedy_algorithm.py
(+22 files in other folders)
